@@ -1,6 +1,6 @@
 <HTML>
 <!-- THIS PAGE IS AUTOMATICALLY GENERATED.  DO NOT EDIT. -->
-<!-- Mon Jan 14 18:49:33 2002 -->
+<!-- Thu Jan 17 16:07:32 2002 -->
 <!-- USING HT2HTML 1.2 -->
 <!-- SEE http://barry.wooz.org/software/ht2html -->
 <!-- User-specified headers:
@@ -157,6 +157,15 @@ In your report, please include at least the following information:
 <h4>Submitting Patches:</h4>
 <ul>
 
+<li>As far as preferred coding style, I try to follow the general 
+<a href="http://www.python.org/doc/essays/styleguide.html" TARGET="Resource Window">Python Style Guide</a>.
+Strict coherence to this is not necessary when working on TMDA, but
+I'd prefer that you match the existing coding style whenever you can.
+In particular, use the existing indentation style in the file(s) you
+are editing (Emacs handles this for you automatically).  Also, please
+limit all lines to a maximum of 79 characters.
+<br><br>
+
 <li>
 Emailed patches should preferably be sent in MIME format, with the actual
 patch included as an attachment.
@@ -175,7 +184,7 @@ than the particular TMDA release you happen to be using.
 <br><br>
 
 </ul>
-Here is an example illustrating the above concepts:
+Here is an example illustrating some of the above concepts:
 
 <ol>
 
@@ -184,7 +193,7 @@ This will create a `tmda' subdirectory in your current working directory
 containing the source:
 
 <blockquote><pre>
-% cd /var/tmp
+% cd /usr/local/src
 % cvs -d:pserver:anonymous@cvs.tmda.sf.net:/cvsroot/tmda login
 [press return at the password prompt]
 
@@ -194,14 +203,14 @@ containing the source:
 <li>Make the necessary changes:
 
 <blockquote><pre>
-% cd /var/tmp/tmda
+% cd /usr/local/src/tmda
 (hack, hack, hack....)
 </blockquote></pre>
 
 <li>Create your patch called "tmda.diff":
 
 <blockquote><pre>
-% cd /var/tmp/tmda
+% cd /usr/local/src/tmda
 % cvs diff -u > tmda.diff
 </blockquote></pre>
 
