@@ -1,3 +1,7 @@
+2002-01-17  Jason R. Mastaler  <jasonrm@nightshade.la.mastaler.com>
+
+	* bugs.ht: Added coding style preferences to the Patches section.
+
 2002-01-14  Jason R. Mastaler  <jasonrm@nightshade.la.mastaler.com>
 
 	* trouble.ht (Links): Recommend reading UPGRADE.
